--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,6 +5,14 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
+          <!--  #static_page_begin.
+           -->
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">about</a>
+          </li>
+  <!--  #static_page_end.
+           -->
+
           <% if(loggedIn) { %>
           <li class="nav-item">
             <a class="nav-link" href="/posts/new">New Post</a>
