--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,19 @@
         <form action="/users/login" method="POST" enctype="multipart/form-data">
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
+
+              <!-- #flash_messages_begin -->
+          <div class="flashes">
+            <% if (flashMessages) { %> <% if (flashMessages.success) { %>
+            <div class="flash success"><%= flashMessages.success %></div>
+            <% } else if (flashMessages.error) { %>
+            <div class="flash error"><%= flashMessages.error %></div>
+            <% } %> <% } %>
+          </div>
+          <!--
+          #flash_messages_end.-->
+
+
               <label>User Name</label>
               <input type="text" class="form-control" placeholder="User Name" id="username" name="username">
             </div>
