--- a/views/create.ejs
+++ b/views/create.ejs
@@ -31,8 +31,15 @@
               <input type="file" class="form-control" id="image" name="image">
             </div>
           </div>
+          <!--#add_fields_ begin -->
+          <label for="inputFirstName">First Name</label>
+          <input type="text" name="first" id="inputFirstName" placeholder="First" autofocus>
+          <br>
+          <label for="inputLastName">Last Name</label>
+          <input type="text" name="last" id="inputLastName" placeholder="Last">
           <br>
           <div id="success"></div>
+            <!--#add_fields_ end -->
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
         </form>
       </div>
